--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma": "^5.13.0",
     "typescript": "^5.4.5"
   },
+  "type": "module",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.13.0",
